k8s/job-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job
spec:
  selector:
    matchLabels:
      app: job
  replicas: 1
  template:
    metadata:
      labels:
        app: job
    spec:
      containers:
        - name: app
          image: ddn:latest
          imagePullPolicy: Never
