k8s/app-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  replicas: 2
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ddn:latest
          imagePullPolicy: Never
          command:
            - node
          args:
            - index.js
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - name: app
      port: 8080
      targetPort: 8080
      protocol: TCP
