k8s/pg-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg
spec:
  selector:
    matchLabels:
      app: pg
  replicas: 1
  template:
    metadata:
      labels:
        app: pg
    spec:
      volumes:
        - name: pg-data
          persistentVolumeClaim:
            claimName:  pg-data-claim
      containers:
        - name: pg
          image: postgres:10.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-data
---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
spec:
  selector:
    app: pg
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
      protocol: TCP
